UITGO/modules/alb/main.tf
resource "aws_alb" "grpc" {
  name = "${var.project_name}-alb-grpc"
  internal = false

  load_balancer_type = "application"
  subnets = var.public_subnet_ids
}

resource "aws_lb_listener" "grpc_443" {
  load_balancer_arn = aws_alb.grpc.arn
  port              = "443"
  protocol = "HTTPS"
  ssl_policy = "ELBSecurityPolicy-TLS13-1-2-2021-06"

  certificate_arn = var.certificate_arn

  default_action {
    type = "forward"
    target_group_arn = aws_lb_target_group.trip_tg.arn
  }
}

resource "aws_lb_target_group" "auth_tg" {
  name     = "${var.project_name}-auth-tg"
  port     = 8080
  protocol = "HTTPS"
  target_type = "ip"
  vpc_id   = var.vpc_id
}

resource "aws_lb_target_group" "driver_tg" {
  name     = "${var.project_name}-driver-tg"
  port     = 8082
  protocol = "HTTPS"
  target_type = "ip"
  vpc_id   = var.vpc_id
}

resource "aws_lb_target_group" "user_tg" {
  name     = "${var.project_name}-user-tg"
  port     = 8081
  protocol = "HTTPS"
  target_type = "ip"
  vpc_id   = var.vpc_id
}


resource "aws_lb_target_group" "trip_tg" {
  name     = "${var.project_name}-trip-tg"
  port     = 8083
  protocol = "HTTPS"
  target_type = "ip"
  vpc_id   = var.vpc_id
}

resource "aws_lb_listener_rule" "auth_rule" {
  listener_arn = aws_lb_listener.grpc_443.arn

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.auth_tg.arn
  }

  condition {
    path_pattern {
      values = ["/auth/*"]
    }
  }
}

resource "aws_lb_listener_rule" "user_rule" {
  listener_arn = aws_lb_listener.grpc_443.arn

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.user_tg.arn
  }

  condition {
    path_pattern {
      values = ["/user/*"]
    }
  }
}

resource "aws_lb_listener_rule" "driver_rule" {
  listener_arn = aws_lb_listener.grpc_443.arn

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.driver_tg.arn
  }

  condition {
    path_pattern {
      values = ["/driver/*"]
    }
  }
}

resource "aws_lb_listener_rule" "trip_rule" {
  listener_arn = aws_lb_listener.grpc_443.arn

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.trip_tg.arn
  }

  condition {
    path_pattern {
      values = ["/trip/*"]
    }
  }
}
